remove grpc-web filter, rename protocol name to grpc-web instead

--- a/kube/services/dotnet-service-service.yaml
+++ b/kube/services/dotnet-service-service.yaml
@@ -6,7 +6,7 @@ metadata:
   name: dotnet-service
 spec:
   ports:
-  - name: grpc-82
+  - name: grpc-web-82
     port: 82
     targetPort: 8080
   selector:
