--- a/kube/services/go-service-service.yaml
+++ b/kube/services/go-service-service.yaml
@@ -6,7 +6,7 @@ metadata:
   name: go-service
 spec:
   ports:
-  - name: grpc-81
+  - name: grpc-web-81
     port: 81
     targetPort: 8080
   selector:
