fix dev container build, bump up versions

--- a/kube/services/grpc-transcoder.yaml
+++ b/kube/services/grpc-transcoder.yaml
@@ -2,11 +2,12 @@ apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
   name: grpc-transcoder
+  # namespace: istio-system
 spec:
   configPatches:
   - applyTo: HTTP_FILTER
     match:
-      context: SIDECAR_INBOUND
+      context: SIDECAR_INBOUND # GATEWAY
       listener:
         filterChain:
           filter:
