--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -41,7 +41,7 @@
 		"ms-dotnettools.csharp",
 		"k--kato.docomment",
 		"eamodio.gitlens",
-		"davidanson.vscode-markdownlint",
+		"yzhang.markdown-all-in-one",
 		"ms-azuretools.vscode-docker",
 		"zxh404.vscode-proto3",
 		"redhat.vscode-yaml",
