--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,6 +43,8 @@
 		"eamodio.gitlens",
 		"yzhang.markdown-all-in-one",
 		"ms-azuretools.vscode-docker",
+		"ms-kubernetes-tools.vscode-kubernetes-tools",
+		"ms-vscode.makefile-tools",
 		"zxh404.vscode-proto3",
 		"redhat.vscode-yaml",
 		"visualstudioexptteam.vscodeintellicode"
