--- a/go-service/makefile
+++ b/go-service/makefile
@@ -1,6 +1,8 @@
 install:
 	go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 	go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+
+get:
 	go get -u -d
 
 build:
