--- a/web-client/makefile
+++ b/web-client/makefile
@@ -2,13 +2,13 @@
 PLATFORM=darwin-x86_64
 GRPC_WEB_VERSION=1.3.1
 
-ifeq ($(OS), DEBIAN)
+ifeq (${OS}, DEBIAN)
 	PLATFORM=linux-x86_64
 endif
 
 get:
-	wget https://github.com/grpc/grpc-web/releases/download/${GRPC_WEB_VERSION}/protoc-gen-grpc-web-${GRPC_WEB_VERSION}-$(PLATFORM) --no-check-certificate
-	mv protoc-gen-grpc-web-${GRPC_WEB_VERSION}-$(PLATFORM) ./protoc-gen-grpc-web
+	wget https://github.com/grpc/grpc-web/releases/download/${GRPC_WEB_VERSION}/protoc-gen-grpc-web-${GRPC_WEB_VERSION}-${PLATFORM} --no-check-certificate
+	mv protoc-gen-grpc-web-${GRPC_WEB_VERSION}-${PLATFORM} ./protoc-gen-grpc-web
 	chmod +x ./protoc-gen-grpc-web
 
 gen:
