--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,7 +2,7 @@
 
 # [Choice] Go version (use -bullseye variants on local arm64/Apple Silicon): 1, 1.19, 1.18, 1-bullseye, 1.19-bullseye, 1.18-bullseye, 1-buster, 1.19-buster, 1.18-buster
 ARG VARIANT="1"
-FROM mcr.microsoft.com/vscode/devcontainers/go:0-${VARIANT}
+FROM mcr.microsoft.com/devcontainers/go:${VARIANT}
 
 # Avoid warnings by switching to noninteractive
 ENV DEBIAN_FRONTEND=noninteractive
@@ -10,31 +10,26 @@ ENV DEBIAN_FRONTEND=noninteractive
 # Configure apt, install packages and tools
 RUN apt update \
     && apt -y install --no-install-recommends apt-utils unzip dialog 2>&1 \
-    && apt -y install git iproute2 procps lsb-release make software-properties-common \
-        apt-transport-https ca-certificates curl gnupg
+    && apt -y install git iproute2 procps lsb-release make software-properties-common gnupg
+
+# Install kubectl
+RUN apt -y install --no-install-recommends \
+        # apt-transport-https may be a dummy package; if so, you can skip that package
+        apt-transport-https \
+        ca-certificates \
+        curl \
+    && curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.28/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+
+# This overwrites any existing configuration in /etc/apt/sources.list.d/kubernetes.list
+RUN echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.28/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list
+RUN apt update && apt install -y kubectl
 
 # Install Nodejs TLS
 RUN curl -fsSL https://deb.nodesource.com/setup_lts.x | bash - \
     && apt install -y nodejs
 
-# install protobuf compiler
-RUN PROTOC_VER=22.2 && \
-    PROTOC_ZIP=protoc-${PROTOC_VER}-linux-aarch_64.zip && \
-    curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v${PROTOC_VER}/${PROTOC_ZIP} && \
-    unzip -o $PROTOC_ZIP -d /usr/local bin/protoc && \
-    unzip -o $PROTOC_ZIP -d /usr/local 'include/*' && \
-    rm -f $PROTOC_ZIP
-
-# Install kubectl
-RUN curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
-RUN echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | tee /etc/apt/sources.list.d/kubernetes.list
-RUN apt update && apt install -y kubectl
-
-COPY copy-kube-config.sh /usr/local/share/
-RUN echo "source /usr/local/share/copy-kube-config.sh" | tee -a /home/vscode/.bashrc >> /home/vscode/.zshrc
-
 # Install istioctl
-ARG ISTIO_VERSION=1.17.1
+ARG ISTIO_VERSION=1.20.0
 RUN cd /usr && curl -L https://istio.io/downloadIstio | ISTIO_VERSION=${ISTIO_VERSION} sh -
 ENV PATH=$PATH:/usr/istio-${ISTIO_VERSION}/bin
 
