--- a/dotnet-service/Dockerfile
+++ b/dotnet-service/Dockerfile
@@ -1,6 +1,6 @@
 # Note: build dotnet-service with this file from outer(root) directory
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS build-env
+FROM mcr.microsoft.com/dotnet/sdk:8.0-jammy AS build-env
 WORKDIR /app
 
 COPY ./dotnet-service .
@@ -9,7 +9,7 @@ COPY ./contracts ../contracts
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:6.0-focal
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-jammy
 WORKDIR /app
 
 COPY --from=build-env /app/out ./
