--- a/kube/services/certificate.yaml
+++ b/kube/services/certificate.yaml
@@ -1,10 +1,28 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: local-dev
+  name: self-signed-issuer
   namespace: istio-system
 spec:
   selfSigned: {}
+
+# apiVersion: cert-manager.io/v1
+# kind: ClusterIssuer
+# metadata:
+#   name: letsencrypt-staging
+#   namespace: istio-system
+# spec:
+#   acme:
+#     # Let's Encrypt uses this to contact you about expiring
+#     # certificates, and issues related to your account.
+#     email: sangzhuoyangy@gmail.com
+#     server: https://acme-staging-v02.api.letsencrypt.org/directory
+#     privateKeySecretRef:
+#       name: letsencrypt-staging
+#     solvers:
+#     - http01:
+#         ingress:
+#           class: istio
 
 ---
 
@@ -15,9 +33,9 @@ metadata:
   namespace: istio-system
 spec:
   secretName: ingressgateway-certs
-  commonName: "127.0.0.1"
+  commonName: "localhost"
   issuerRef:
-    name: local-dev
+    name: self-signed-issuer
     kind: ClusterIssuer
   dnsNames:
-  - "127.0.0.1"
+  - "localhost"
