--- a/dotnet-service/Dockerfile
+++ b/dotnet-service/Dockerfile
@@ -1,6 +1,6 @@
 # Note: build dotnet-service with this file from outer(root) directory
 
-FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build-env
+FROM mcr.microsoft.com/dotnet/sdk:9.0-noble AS build-env
 WORKDIR /app
 
 COPY ./dotnet-service .
@@ -9,9 +9,9 @@ COPY ./contracts ../contracts
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:9.0
+FROM mcr.microsoft.com/dotnet/aspnet:9.0-noble
 WORKDIR /app
 
 COPY --from=build-env /app/out ./
 
-ENTRYPOINT dotnet server.dll
+ENTRYPOINT ["dotnet", "server.dll"]
