--- a/go-service/Dockerfile
+++ b/go-service/Dockerfile
@@ -1,8 +1,8 @@
-FROM golang:1.23
+FROM golang:1.24
 WORKDIR /go/server
 
 # Build src
 COPY ./ ./
 RUN make build-frozen
 
-ENTRYPOINT ./server_exec
+ENTRYPOINT ["./server_exec"]
