--- a/kube/services/ingress-gateway.yaml
+++ b/kube/services/ingress-gateway.yaml
@@ -1,25 +1,10 @@
-# apiVersion: networking.istio.io/v1
-# kind: Gateway
-# metadata:
-#   name: istio-ingressgateway
-# spec:
-#   selector:
-#     istio: ingressgateway # use Istio default gateway implementation
-#   servers:
-#   - port:
-#       number: 80
-#       name: http
-#       protocol: HTTP
-#     hosts:
-#     - "*"
-
----
-
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: istio-ingressgateway
   # namespace: app-ingress
+  # annotations:
+  #   networking.istio.io/service-type: ClusterIP
 spec:
   gatewayClassName: istio
   listeners:
@@ -30,6 +15,48 @@ spec:
     allowedRoutes:
       namespaces:
         from: All
+
+---
+
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: http-route-cors
+spec:
+  parentRefs:
+  - name: istio-ingressgateway
+  rules:
+  - backendRefs:
+    - name: go-service
+      port: 81
+    filters:
+    - type: CORS
+      cors:
+        allowOrigins:
+        - "http://*"
+        allowMethods:
+        - GET
+        - HEAD
+        - POST
+        allowHeaders:
+        - Accept
+        - Accept-Language
+        - Content-Language
+        - Range
+        - Authorization
+        - User-Agent
+        - Content-Type
+        - Content-Transfer-Encoding
+        - X-Accept-Content-Transfer-Encoding
+        - X-Accept-Response-Streaming
+        - X-User-Agent
+        - X-Grpc-Web
+        exposeHeaders:
+        - grpc-status
+        - grpc-message
+        - grpc-encoding
+        - grpc-accept-encoding
+        - grpc-timeout
 
 ---
 
@@ -47,18 +74,6 @@ spec:
   - matches:
     - method:
         service: go_service.Greeter
-    # filters:
-    #   - type: ResponseHeaderModifier
-    #     responseHeaderModifier:
-    #       add:
-    #         - name: Access-Control-Allow-Origin
-    #           value: "*"
-    #         - name: Access-Control-Allow-Methods
-    #           value: POST, GET, HEAD, DELETE
-    #         - name: Access-Control-Allow-Headers
-    #           value: Accept, Content-Type, application/json, Content-Length, Accept-Encoding, X-CSRF-Token, XMLHttpRequest, x-user-agent, x-user-request, x-grpc-web, grpc-status, grpc-message
-    #         - name: Access-Control-Control-Expose-Headers
-    #           value: grpc-status, grpc-message
     backendRefs:
     - name: go-service
       port: 81
@@ -84,18 +99,6 @@ spec:
     - path:
         type: PathPrefix
         value: /greet-go
-    # filters:
-    #   - type: ResponseHeaderModifier
-    #     responseHeaderModifier:
-    #       add:
-    #         - name: Access-Control-Allow-Origin
-    #           value: "*"
-    #         - name: Access-Control-Allow-Methods
-    #           value: POST, GET, HEAD, DELETE
-    #         - name: Access-Control-Allow-Headers
-    #           value: Accept, Content-Type, application/json, Content-Length, Accept-Encoding, X-CSRF-Token, XMLHttpRequest, x-user-agent, x-user-request, x-grpc-web, grpc-status, grpc-message
-    #         - name: Access-Control-Control-Expose-Headers
-    #           value: grpc-status, grpc-message
     backendRefs:
       - name: go-service
         port: 81
@@ -107,82 +110,6 @@ spec:
     backendRefs:
       - name: dotnet-service
         port: 82
-
----
-
-# apiVersion: networking.istio.io/v1
-# kind: VirtualService
-# metadata:
-#   name: istio-ingressgateway-router
-# spec:
-#   hosts:
-#   - "*"
-#   gateways:
-#   - istio-ingressgateway
-#   http:
-#   - match:
-#     - uri: # HTTP
-#         prefix: /greet-dotnet
-#     - uri: # GRPC
-#         prefix: /dotnet_service.Greeter
-#     route:
-#     - destination:
-#         port:
-#           number: 82
-#         host: dotnet-service.default.svc.cluster.local
-#     corsPolicy:
-#       allowOrigins:
-#       - regex: ".*"
-#       allowMethods:
-#       - POST
-#       - GET
-#       allowHeaders:
-#       - Authorization
-#       - User-Agent
-#       - Content-Type
-#       - Content-Transfer-Encoding
-#       - X-Accept-Content-Transfer-Encoding
-#       - X-Accept-Response-Streaming
-#       - X-User-Agent
-#       - X-Grpc-Web
-#       exposeHeaders:
-#       - grpc-status
-#       - grpc-message
-#       - grpc-encoding
-#       - grpc-accept-encoding
-#       - grpc-timeout
-
-#   - match:
-#     - uri: # HTTP
-#         prefix: /greet-go
-#     - uri: # GRPC
-#         prefix: /go_service.Greeter
-#     route:
-#     - destination:
-#         port:
-#           number: 81
-#         host: go-service.default.svc.cluster.local
-#     corsPolicy:
-#       allowOrigins:
-#       - regex: ".*"
-#       allowMethods:
-#       - POST
-#       - GET
-#       allowHeaders:
-#       - Authorization
-#       - User-Agent
-#       - Content-Type
-#       - Content-Transfer-Encoding
-#       - X-Accept-Content-Transfer-Encoding
-#       - X-Accept-Response-Streaming
-#       - X-User-Agent
-#       - X-Grpc-Web
-#       exposeHeaders:
-#       - grpc-status
-#       - grpc-message
-#       - grpc-encoding
-#       - grpc-accept-encoding
-#       - grpc-timeout
 
 # ---
 
