--- a/kube/services/grpc-transcoder.yaml
+++ b/kube/services/grpc-transcoder.yaml
@@ -1,29 +1,32 @@
-apiVersion: networking.istio.io/v1alpha3
-kind: EnvoyFilter
-metadata:
-  name: grpc-transcoder
-  # namespace: istio-system
-spec:
-  configPatches:
-  - applyTo: HTTP_FILTER
-    match:
-      context: SIDECAR_INBOUND # GATEWAY
-      listener:
-        filterChain:
-          filter:
-            name: envoy.filters.network.http_connection_manager
-            subFilter:
-              name: envoy.filters.http.router
-    patch:
-      operation: INSERT_BEFORE
-      value:
-        name: envoy.filters.http.grpc_json_transcoder
-        typed_config:
-          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
-          proto_descriptor: /etc/envoy/desc.pb
-          services:
-          - go_service.Greeter
-          - dotnet_service.Greeter
-          print_options:
-            add_whitespace: true
-            always_print_primitive_fields: true
+# apiVersion: networking.istio.io/v1alpha3
+# kind: EnvoyFilter
+# metadata:
+#   name: grpc-transcoder
+#   namespace: istio-system
+# spec:
+#   workloadSelector:
+#     labels:
+#       istio: ingressgateway
+#   configPatches:
+#   - applyTo: HTTP_FILTER
+#     match:
+#       context: GATEWAY
+#       listener:
+#         filterChain:
+#           filter:
+#             name: envoy.filters.network.http_connection_manager
+#             subFilter:
+#               name: envoy.filters.http.router
+#     patch:
+#       operation: INSERT_BEFORE
+#       value:
+#         name: envoy.filters.http.grpc_json_transcoder
+#         typed_config:
+#           "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
+#           proto_descriptor: /etc/envoy/desc.pb
+#           services:
+#           - go_service.Greeter
+#           - dotnet_service.Greeter
+#           print_options:
+#             add_whitespace: true
+#             always_print_primitive_fields: true
