--- a/web-client/package.json
+++ b/web-client/package.json
@@ -8,13 +8,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "google-protobuf": "^3.21.4",
-    "grpc-web": "^1.5.0"
+    "google-protobuf": "^4.0.1",
+    "grpc-web": "^2.0.2"
   },
   "devDependencies": {
-    "webpack": "^5.99.9",
+    "webpack": "^5.105.2",
     "webpack-cli": "^6.0.1"
   },
   "author": "Oscar Yu",
-  "license": "ISC"
+  "license": "ISC",
+  "packageManager": "yarn@4.12.0"
 }
