--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,16 +48,15 @@
 			"extensions": [
 				"golang.Go",
 				"ms-dotnettools.csdevkit",
-				"ms-dotnettools.vscodeintellicode-csharp",
 				"k--kato.docomment",
 				"eamodio.gitlens",
 				"yzhang.markdown-all-in-one",
 				"ms-azuretools.vscode-docker",
 				"ms-kubernetes-tools.vscode-kubernetes-tools",
 				"ms-vscode.makefile-tools",
-				"zxh404.vscode-proto3",
 				"redhat.vscode-yaml",
-				"visualstudioexptteam.vscodeintellicode"
+				"DrBlury.protobuf-vsc",
+				"google.geminicodeassist"
 			]
 		}
 	}
