--- a/kube/services/ingress-gateway.yaml
+++ b/kube/services/ingress-gateway.yaml
@@ -1,3 +1,5 @@
+# Use tunnel to access it via e.g.:
+#   kubectl port-forward -n istio-system svc/istio-ingressgateway 8080:80
 # apiVersion: gateway.networking.k8s.io/v1
 # kind: Gateway
 # metadata:
