--- a/kube/services/dotnet-service-pod.yaml
+++ b/kube/services/dotnet-service-pod.yaml
@@ -15,12 +15,15 @@ spec:
         app: dotnet-service
     spec:
       containers:
-      - image: dotnet-service
+      - image: dotnet-service:latest
         name: dotnet-service
         imagePullPolicy: Never
         ports:
         - containerPort: 8080
         resources:
+          requests:
+            cpu: 250m
+            memory: 256Mi
           limits:
             cpu: 500m
             memory: 512Mi
